@@ -1,0 +1,4 @@
+numpy>=1.15.1
+requests>=2.19.1
+prompt_toolkit>=2.0.5
+pygments>=2.2.0
